--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -4,7 +4,7 @@ const currentYear = new Date().getFullYear();
 
 <footer class="footer">
 	<div class="container">
-		<p class="is-size-7">Right Order | 416 986 1059</p>
-		<p class="is-size-7">© {currentYear} Right Order. All rights reserved.</p>
+		<p class="is-size-7">Well Sorted | 416 986 1059</p>
+		<p class="is-size-7">© {currentYear} Well Sorted. All rights reserved.</p>
 	</div>
 </footer>
