--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -9,10 +9,10 @@ import contact from '../img/nav-contact.svg';
 <header class="navbar is-transparent" role="banner">
 	<div class="container">
 		<div class="navbar-brand">
-			<a class="navbar-item" id="logo" href="/" aria-label="Right Order home">
-				<Image src={logo} alt="Right Order" />
+			<a class="navbar-item" id="logo" href="/" aria-label="Well Sorted home">
+				<Image src={logo} alt="Well Sorted" />
 			</a>
-			<button class="navbar-burger" aria-label="menu" aria-expanded="false" data-target="primaryNav">
+			<button class="navbar-burger" type="button" aria-label="menu" aria-expanded="false" aria-controls="primaryNav" data-target="primaryNav">
 				<span aria-hidden="true"></span>
 				<span aria-hidden="true"></span>
 				<span aria-hidden="true"></span>
@@ -20,9 +20,9 @@ import contact from '../img/nav-contact.svg';
 		</div>
 		<div id="primaryNav" class="navbar-menu">
 			<div class="navbar-end">
-				<a class="navbar-item" href="#about"><Image src={about} alt="About Right Order" /></a>
-				<a class="navbar-item" href="#services"><Image src={services} alt="Right Order Services" /></a>
-				<a class="navbar-item linktoform" href="#contact"><Image src={contact} alt="Contact Right Order" /></a>
+				<a class="navbar-item" href="#about"><Image src={about} alt="About Well Sorted" /></a>
+				<a class="navbar-item" href="#services"><Image src={services} alt="Well Sorted Services" /></a>
+				<a class="navbar-item linktoform" href="#contact"><Image src={contact} alt="Contact Well Sorted" /></a>
 			</div>
 		</div>
 	</div>
