--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -16,7 +16,7 @@ const {
 	keywords,
 	author,
 	twitterHandle,
-	themeColor = '#c226dd',
+	themeColor = '#383f68',
 	locale = 'en_US',
 } = Astro.props;
 
