--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,7 +9,7 @@ import call from '../img/discovery-call.webp';
 
 <BaseLayout
 	title="Well Sorted"
-	description="Well Sorted is a local, trusted digital document and file organization support service for individuals and small businesses"
+	description="Well Sorted is a local, trusted, digital document and file organization support service for individuals and small businesses"
 	keywords="digital document organization, file organization, photo organization, account management, password help, subscription cleanup, digital safety, small business support, personal admin help, Well Sorted">
 	<section id="about" class="section is-spaced enable-trig">
 		<div class="container">
@@ -17,10 +17,10 @@ import call from '../img/discovery-call.webp';
 				<div class="column is-8">
 					<p class="eyebrow">LOCAL • TRUSTED • RELIABLE</p>
 					<h1>
-						<strong class="highlight">Well Sorted</strong> is a local, trusted, digital document and file organization support service for individuals and small businesses.
+						<strong class="highlight">Well Sorted</strong> is a local digital document and file organization support service for individuals and small businesses.
 					</h1>
-					<p class="subtitle is-4">
-						<strong>Practical help for people and small businesses who feel overwhelmed by the growing number of digital files, photos, and account management security.</strong>
+					<p class="subtitle is-3">
+						Practical help for <strong>people</strong> and <strong>small businesses</strong> who feel overwhelmed by the growing number of digital files, photos, and account management security.
 					</p>
 				</div>
 				<div class="column is-4">
